Fix reset page alignment

--- a/src/App.css
+++ b/src/App.css
@@ -276,6 +276,6 @@ input {
   left: 16px !important;
 }
 
-.MuiGrid-container {
+.reset-form-62 MuiGrid-container {
   display: block !important;
 }
